# OPENGL-Boilerplate

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
resources/: triangle_vertex.glsl
resources/data/: circle.ini  line.ini  point.ini  triangle.ini
resources/shader/: circle_shader.ini  line_shader.ini  point_shader.ini  triangle_shader.ini
resources/shaders/: line_fragment.glsl  line_vertex.glsl  point_fragment.glsl  point_vertex.glsl  triangle_fragment.glsl
src/: main.c
src/data/: data.c  data.h
src/data/figure/: figure_loader.c  figure_loader.h
src/draw/: draw_manager.c  draw_manager.h
src/logger/: logger.c  logger.h
src/objects/: triangle.c
src/objects/circle/: circle.c  circle.h
src/objects/line/: line.c  line.h
src/objects/point/: point.c  point.h
src/objects/triangle/: triangle.c  triangle.h
src/shaders/: shader_manager.c  shader_manager.h
src/utils/: string_utils.h
